// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data modeling usage data pre-7.15.0 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "deprecated": 0,
    "total": 3,
  },
  "_all": 12,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "csv_searchsource": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "deprecated": 0,
      "total": 1,
    },
    "_all": 1,
    "csv": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "csv_searchsource": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "deprecated": 0,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 0,
      "completed_with_warnings": 1,
      "failed": 0,
    },
    "statuses": Object {
      "completed_with_warnings": Object {
        "PNG": Object {
          "dashboard": 1,
        },
      },
    },
  },
  "printable_pdf": Object {
    "app": Object {
      "canvas workpad": 6,
      "dashboard": 0,
      "visualization": 3,
    },
    "available": true,
    "deprecated": 0,
    "layout": Object {
      "preserve_layout": 9,
      "print": 0,
    },
    "total": 9,
  },
  "status": Object {
    "completed": 10,
    "completed_with_warnings": 1,
    "failed": 1,
  },
  "statuses": Object {
    "completed": Object {
      "PNG": Object {
        "visualization": 1,
      },
      "printable_pdf": Object {
        "canvas workpad": 6,
        "visualization": 3,
      },
    },
    "completed_with_warnings": Object {
      "PNG": Object {
        "dashboard": 1,
      },
    },
    "failed": Object {
      "PNG": Object {
        "dashboard": 1,
      },
    },
  },
}
`;

exports[`data modeling usage data with meta.isDeprecated jobTypes 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "_all": 9,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "deprecated": 4,
    "total": 4,
  },
  "csv_searchsource": Object {
    "available": true,
    "deprecated": 0,
    "total": 5,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "_all": 9,
    "csv": Object {
      "available": true,
      "deprecated": 4,
      "total": 4,
    },
    "csv_searchsource": Object {
      "available": true,
      "deprecated": 0,
      "total": 5,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "deprecated": 0,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 9,
      "failed": 0,
    },
    "statuses": Object {
      "completed": Object {
        "csv": Object {
          "search": 4,
        },
        "csv_searchsource": Object {
          "search": 5,
        },
      },
    },
  },
  "printable_pdf": Object {
    "app": Object {
      "dashboard": 0,
      "visualization": 0,
    },
    "available": true,
    "deprecated": 0,
    "layout": Object {
      "preserve_layout": 0,
      "print": 0,
    },
    "total": 0,
  },
  "status": Object {
    "completed": 9,
    "failed": 0,
  },
  "statuses": Object {
    "completed": Object {
      "csv": Object {
        "search": 4,
      },
      "csv_searchsource": Object {
        "search": 5,
      },
    },
  },
}
`;

exports[`data modeling with empty data 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "_all": 0,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "csv_searchsource": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "_all": 0,
    "csv": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "csv_searchsource": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "deprecated": 0,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 0,
      "failed": 0,
    },
    "statuses": Object {},
  },
  "printable_pdf": Object {
    "app": Object {
      "dashboard": 0,
      "visualization": 0,
    },
    "available": true,
    "deprecated": 0,
    "layout": Object {
      "preserve_layout": 0,
      "print": 0,
    },
    "total": 0,
  },
  "status": Object {
    "completed": 0,
    "failed": 0,
  },
  "statuses": Object {},
}
`;

exports[`data modeling with sparse data 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "deprecated": 0,
    "total": 1,
  },
  "_all": 4,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "deprecated": 1,
    "total": 1,
  },
  "csv_searchsource": Object {
    "available": true,
    "deprecated": 0,
    "total": 0,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "deprecated": 0,
      "total": 1,
    },
    "_all": 4,
    "csv": Object {
      "available": true,
      "deprecated": 1,
      "total": 1,
    },
    "csv_searchsource": Object {
      "available": true,
      "deprecated": 0,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "canvas workpad": 1,
        "dashboard": 1,
        "visualization": 0,
      },
      "available": true,
      "deprecated": 0,
      "layout": Object {
        "preserve_layout": 2,
        "print": 0,
      },
      "total": 2,
    },
    "status": Object {
      "completed": 4,
      "failed": 0,
    },
    "statuses": Object {
      "completed": Object {
        "PNG": Object {
          "dashboard": 1,
        },
        "csv": Object {},
        "printable_pdf": Object {
          "canvas workpad": 1,
          "dashboard": 1,
        },
      },
    },
  },
  "printable_pdf": Object {
    "app": Object {
      "canvas workpad": 1,
      "dashboard": 1,
      "visualization": 0,
    },
    "available": true,
    "deprecated": 0,
    "layout": Object {
      "preserve_layout": 2,
      "print": 0,
    },
    "total": 2,
  },
  "status": Object {
    "completed": 4,
    "failed": 0,
  },
  "statuses": Object {
    "completed": Object {
      "PNG": Object {
        "dashboard": 1,
      },
      "csv": Object {},
      "printable_pdf": Object {
        "canvas workpad": 1,
        "dashboard": 1,
      },
    },
  },
}
`;
